# shotwell

./: .doap  .gitignore  .gitlab-ci.yml  AUTHORS  AppWindow.vala  BatchImport.vala  Box.vala  COPYING  CollectionLayout.vala  CollectionPage.vala  DatabaseTables.vala  Dimensions.vala  EventsDirectoryPage.vala  Exif.vala  ExportDialog.vala  GPhoto.vala  Gemfile  INSTALL  ImportPage.vala  LICENSE.omnibus  MAINTAINERS  Makefile  Makefile.am  NEWS  Orientation.vala  Page.vala  Photo.vala  PhotoPage.vala  PhotoTable.vala  README  README.md  README.transifex  Resources.vala  SortedList.vala  THANKS  Thumbnail.vala  ThumbnailCache.vala  ThumbnailCacheTable.vala  _config.yml  authenticator.am  (+41 more)
app-icons/: Makefile.am  meson.build
data/: auth-callback.html  meson.build  org.gnome.Shotwell-Profile-Browser.desktop.in  org.gnome.Shotwell-Viewer.desktop.in  org.gnome.Shotwell.Auth.desktop.in  org.gnome.Shotwell.Widgets.gresource.xml  org.gnome.Shotwell.appdata.xml.in  org.gnome.Shotwell.desktop.in  org.gnome.Shotwell.gresource.xml  org.gnome.Shotwell.metainfo.xml.in
data/apport/: meson.build  shotwell.py
data/gsettings/: meson.build  org.gnome.shotwell-extras.gschema.xml  org.gnome.shotwell.gschema.xml  org.yorba.shotwell-extras.gschema.xml  org.yorba.shotwell.gschema.xml
data/icons/: meson.build
data/misc/: canary.avif
data/themes/: org.gnome.Shotwell.css
data/ui/: account-browser.ui  app-dropdown-item.ui  collection.ui  detailed-row.ui  direct.ui  editing-toolbar.ui  event.ui  events_directory.ui  faces.ui  fullscreen.ui  import.ui  import_queue.ui  information-row.ui  list-header.ui  login_welcome_pane_widget.ui  manifest_widget.ui  media.ui  message_pane.ui  multitextentrydialog.ui  offline.ui  photo.ui  photo_context.ui  preferences_dialog.ui  preferences_dialog_list_row.ui  printing_widget.ui  profile_editor_dialog.ui  progress_pane_widget.ui  saved_search_dialog.ui  search_bar.ui  search_sidebar_context.ui  set_background_dialog.ui  set_background_slideshow_dialog.ui  settings-group.ui  sidebar_default_context.ui  slideshow_settings.ui  static_message_pane_widget.ui  tags.ui  textentrydialog.ui  trash.ui
facedetect/: facedetect-opencv.cpp  meson.build  org.gnome.ShotwellFaces1.xml  org.gnome.shotwell.faces.service  shotwell-facedetect.cpp  shotwell-facedetect.hpp
help/: LINGUAS  Makefile.am  advanced-startup.page  advanced-where.page  browse-navigate.page  browse-view.page  edit-enhance.page  edit-external.page  edit-rotate.page  edit-undo.page  features-browsing.page  features-editing.page  features-importing.page  features-introduction.page  features-organising.page  features-organizing.page  features-sharing.page  import-camera.page  import-f-spot.page  import-file.page  index.page  meson.build  organise-delete.page  organise-event.page  organise-rating.page  organise-tag.page  organise-title.page  organize-delete.page  organize-event.page  organize-rating.page  organize-remove.page  share-print.page  share-slideshow.page  share-upload.page  shotwell.1  view-displaying.page  view-information.page
help/C/: Makefile  edit-adjustments.page  edit-crop.page  edit-date-time.page  edit-enhance.page  edit-external.page  edit-introduction.page  edit-multiple.page  edit-nondestructive.page  edit-redeye.page  edit-rotate.page  edit-straighten.page  edit-time-date.page  edit-undo.page  formats.page  google-policy.page  import-camera.page  import-f-spot.page  import-file.page  import-memorycard.page  index.page  introduction.page  keyboard-shortcuts.page  organize-event.page  organize-face-tagging.page  organize-flag.page  organize-rating.page  organize-remove.page  organize-search.page  organize-tag.page  organize-title.page  other-files.page  other-missing.page  other-multiple.page  other-plugins.page  other-standalone.page  privacy-policy.page  raw.page  running.page  share-background.page  (+8 more)
icons/: Makefile.am
misc/: Makefile.am  meson.build  org.gnome.Shotwell.css  org.yorba.shotwell-extras.gschema.xml  org.yorba.shotwell.gschema.xml  shotwell-viewer.desktop  shotwell-viewer.desktop.head  shotwell-viewer.desktop.in.in  shotwell.appdata.xml  shotwell.appdata.xml.in  shotwell.convert  shotwell.desktop  shotwell.desktop.head  shotwell.desktop.in  shotwell.schemas
plugins/: Makefile  Makefile.plugin.mk  meson.build  plugins.mk
src/: AlienDatabase.vala  AlienDatabaseImportDialog.vala  AlienDatabaseImportJob.vala  AppDirs.vala  AppWindow.vala  Application.vala  AuthCallbackServer.vala  BatchImport.vala  Box.vala  CameraTable.vala  CheckerboardItem.vala  CheckerboardItemText.vala  CheckerboardLayout.vala  CheckerboardPage.vala  CollectionLayout.vala  CollectionPage.vala  ColorTransformation.vala  CommandManager.vala  Commands.vala  Config.vala  CustomComponents.vala  DataCollection.vala  DataObject.vala  DataSource.vala  DatabaseTables.vala  Debug.vala  DelayedQueue.vala  DesktopIntegration.vala  Dialogs.vala  Dimensions.vala  DirectWindow.vala  DirectoryMonitor.vala  DragAndDropHandler.vala  EditingHostPage.vala  EditingTools.vala  Event.vala  EventsDirectoryPage.vala  Exif.vala  ExportDialog.vala  Exporter.vala  (+102 more)
test/: .gitignore  DatabaseTable.vala  ExternalHelper.vala  ExternalHelperTest.vala  ExternalHelperTestExecutable.vala  Makefile  NaturalCmp-Test.vala  NaturalCollate-Test.vala  NaturalCollate.vala  RegexpReplace.vala  meson.build  server.py  testAsyncableBackgroundJob.vala
ui/: Makefile.am  appmenu.ui  collection.ui  direct.ui  direct_context.ui  event.ui  events_directory.ui  faces.ui  fullscreen.ui  import.ui  import_queue.ui  manifest_widget.ui  media.ui  offline.ui  photo.ui  photo_context.ui  preferences_dialog.ui  preferences_dialog_list_row.ui  printing_widget.ui  saved_search_dialog.ui  savedsearch.ui  search_bar.ui  search_sidebar_context.ui  set_background_dialog.glade  set_background_dialog.ui  set_background_slideshow_dialog.glade  set_background_slideshow_dialog.ui  shotwell.glade  shotwell.ui  shotwell.xml  sidebar_default_context.ui  slideshow_settings.ui  tag_sidebar_context.ui  tags.ui  textentrydialog.ui  top.ui  trash.ui  video.ui  videos.ui
(+845 files in other folders)
