install_subdir('16x16',
               install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor'))
install_subdir('22x22',
               install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor'))
install_subdir('24x24',
               install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor'))
install_subdir('256x256',
               install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor'))
install_subdir('32x32',
               install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor'))
install_subdir('48x48',
               install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor'))
install_subdir('symbolic',
               install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor'))
